--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
   <meta charset="UTF-8" />
@@ -32,7 +32,7 @@
 
   <meta name="google" value="notranslate" />
 
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="public/site.webmanifest">
   <title>Vite + React + TS</title>
 </head>
 
