--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
+  <!-- way 1 to set service worker manual (if used way 2 delete this)  -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
