--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <meta name="google" value="notranslate" />
 
-  <link rel="manifest" href="public/site.webmanifest">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Vite + React + TS</title>
 </head>
 
